--- a/Sample/html.html
+++ b/Sample/html.html
@@ -34,7 +34,7 @@
   <div class="about-container">
     <div class="about-left">
       <div class="profile-pic">
-        <img src="C:\Users\ACER\Downloads\Pic.jpg" alt="Hrithick" />
+        <img src="C:\Users\ACER\Desktop\New folder\Sample\assets\Pic.jpg" alt="Hrithick" />
       </div>
       <div class="about-text">
   <h2>About Me</h2>
@@ -60,7 +60,7 @@
     developers, and grow as a web professional.
     </i>
   </p>
-<a href="Hrithick_CV.pdf" class="btn cv-btn" download>Download CV</a>
+<a href="C:\Users\ACER\Desktop\New folder\Sample\assets\Hrithick.pdf" class="btn cv-btn" download>Download CV</a>
 
   
 </div>
