--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,7 +34,7 @@
   <div class="about-container">
     <div class="about-left">
       <div class="profile-pic">
-        <img src="assets/pic.jpg" alt="Hrithick" />
+        <img src="assets/Pic.jpg" alt="Hrithick" />
       </div>
       <div class="about-text">
   <h2>About Me</h2>
