Updated portfolio index page

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -94,30 +94,30 @@
   <section id="projects" class="projects">
     <h2>Projects</h2>
     <div class="project-grid">
-      <div class="project-card" data-title="Portfolio Website" data-tech="HTML, CSS, JS" data-desc="My personal portfolio website built with modern design.">
+      <div class="project-card" data-title="Calculator" data-tech="HTML, CSS, JS" data-desc="glassmorphism-calculator website built with HTML, CSS, JS.">
         <img src="https://via.placeholder.com/300x180" alt="Project">
-        <h3>Portfolio Website</h3>
+        <h3>Calculator</h3>
         <div class="buttons">
           <a href="#" class="btn">View Code</a>
-          <a href="#" class="btn">Live Demo</a>
+          <a href="https://glassmorphism-calculator-git-main-hrithick55s-projects.vercel.app/" class="btn">Live Demo</a>
         </div>
       </div>
 
-      <div class="project-card" data-title="ToDo App" data-tech="React.js, CSS" data-desc="A responsive todo app built using React.js.">
+      <div class="project-card" data-title="Web_quizbot" data-tech="Html, CSS , JS" data-desc="A responsive Web_quizbot built using Html, Css3, Js.">
         <img src="https://via.placeholder.com/300x180" alt="Project">
-        <h3>ToDo App</h3>
+        <h3>Web_quizbot</h3>
         <div class="buttons">
           <a href="#" class="btn">View Code</a>
-          <a href="#" class="btn">Live Demo</a>
+          <a href="https://vercel.com/hrithick55s-projects/web-quizbot/4GyNBghKqEMsNJT5AvbACR9qS61Q" class="btn">Live Demo</a>
         </div>
       </div>
 
-      <div class="project-card" data-title="Weather App" data-tech="HTML, CSS, JS, API" data-desc="Weather forecast app using OpenWeather API.">
+      <div class="project-card" data-title="Habit tracker" data-tech="HTML, CSS, JS, Tailwind" data-desc="Habit tracker web app using Html, Tailwind, JavaScript, Css3.">
         <img src="https://via.placeholder.com/300x180" alt="Project">
-        <h3>Weather App</h3>
+        <h3>Habit Tracker</h3>
         <div class="buttons">
           <a href="#" class="btn">View Code</a>
-          <a href="#" class="btn">Live Demo</a>
+          <a href="https://habit-tracker-git-main-hrithick55s-projects.vercel.app/" class="btn">Live Demo</a>
         </div>
       </div>
     </div>
